Implement the backend for Last 10 games of a team
